<resources>
    <string name="app_name">AbdurRahman G</string>
    <string name="abdurrahmang">AbdurRahman G</string>
    <string name="todo">TODO</string>
    <string name="home_page_image_of_abdurrahman_g">Home Page Image of AbdurRahman G</string>
    <string name="happy_birthday_image">Happy Birthday Image</string>
    <string name="from_abdurrahman_g">From AbdurRahman G</string>
    <string name="to_farida">To Farida</string>
    <string name="techilyfly">Techily Fly</string>
    <string name="aamgali">AaMGaLI</string>
    <string name="choose_one_from_below">Choose One From Below!</string>
    <string name="welcome_to_abdurrahman_g_official">Welcome to AbdurRahman G Official</string>
    <string name="welcome_to_techily_fly">Welcome to Techily Fly</string>
    <string name="welcome_to_aamgali">Welcome to AaMGaLI</string>
    <string name="welcome_to_abdurrahman_g">Welcome to AbdurRahman G</string>
    <string name="contact_details_are_below">Contact Details are Below: -</string>
    <string name="abdurrahmangcontactnumber918825164657">+91 8825164657</string>
    <string name="abdurrahmangcontact_gmail_com">AbdurRahmanGContact@gmail.com</string>
    <string name="open_24_7">Open 24/7</string>
    <string name="techily_fly_is_a_software_consultant_and_development_company">Techily Fly is a Software Consultant and Development Company!</string>
    <string name="music_play">Music Play</string>
    <string name="video_play">Video Play</string>
</resources>